<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_fb_txt">Follow us on facebook</string>
    <string name="about_setting_view_forum">Official Forum</string>
    <string name="about_setting_view_privacy_agreement">Privacy Policy</string>
    <string name="about_setting_view_uc">Design by UC Team</string>
    <string name="about_setting_view_useragreement">Terms of Use</string>
    <string name="about_setting_view_webcore_info">Base on U4 %s kernel</string>
    <string name="about_setting_window_function">Features</string>
    <string name="about_setting_window_share">Share to friend</string>
    <string name="about_setting_window_title">About</string>
    <string name="about_setting_window_upgrade">Check new version</string>
    <string name="about_version_prefix">version</string>
    <string name="access_close_window">Close window</string>
    <string name="access_new_window">New window</string>
    <string name="access_return">Return</string>
    <string name="account_invalid_st">please login again</string>
    <string name="ad_block_advanced_mode">Powerful Ad Block mode</string>
    <string name="ad_block_block_mannual_switcher">Enable Mannual Ad Block</string>
    <string name="ad_block_rule_empty_view_text">None Rules</string>
    <string name="ad_block_rule_title_view_text">Ad Block Rules</string>
    <string name="ad_block_rule_view_delete_text">delete</string>
    <string name="ad_block_rule_window_title">Ad Block</string>
    <string name="ad_block_toast_off">Ad Block Off!</string>
    <string name="ad_block_toast_on">Ad Block On!</string>
    <string name="add_bookmark">Bookmark</string>
    <string name="add_bookmark_cancel">Cancel</string>
    <string name="add_bookmark_done">Done</string>
    <string name="add_bookmark_title">Add to</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="add_navigation">Home navigation</string>
    <string name="add_ucdrive_tips_btn_text">Add</string>
    <string name="add_ucdrive_tips_label_text">Add to UC Drive Smooth Play</string>
    <string name="allinnavi">Discover</string>
    <string name="app_last_use_time">Last used: %1$s</string>
    <string name="app_name">UC Turbo</string>
    <string name="app_name_in_launcher">UC Turbo</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auth_request_tips">Account and password required</string>
    <string name="auth_uc_usage_permission">"Click \"UC Browser\"
and authorize it"</string>
    <string name="back_dir">Go to parent directory</string>
    <string name="bg_play_back">Back to video</string>
    <string name="bg_play_tips">Voice can be played in background</string>
    <string name="bgp_btn_switch">Floating background play button for youtube</string>
    <string name="bgp_delete_btn">Drag to here to delete</string>
    <string name="bgp_goto_background">Go to background</string>
    <string name="bgp_try_it">Try it</string>
    <string name="bk_search_bar_empty_tip">No content found</string>
    <string name="blank" />
    <string name="bookmark">Bookmark</string>
    <string name="bookmark_add_error">Unable to collect this URL</string>
    <string name="bookmark_add_folder_fail">Fail to add folder</string>
    <string name="bookmark_add_sucess">Bookmark Added!</string>
    <string name="bookmark_add_to_nav">Add to navigation</string>
    <string name="bookmark_add_to_private">Add to private</string>
    <string name="bookmark_backgroud_open">Open in background</string>
    <string name="bookmark_background_open_tips">Opened in the background</string>
    <string name="bookmark_cancel">Cancel</string>
    <string name="bookmark_cancel_classify">Remove Tag</string>
    <string name="bookmark_cancel_top_stick">Remove from Top</string>
    <string name="bookmark_cloudbar_not_login">Login</string>
    <string name="bookmark_cloudbar_not_sync">Unsync</string>
    <string name="bookmark_cloudbar_title">Sync</string>
    <string name="bookmark_complete">Done</string>
    <string name="bookmark_delete">Delete</string>
    <string name="bookmark_delete_tips">Delete %d selected bookmark(s)?</string>
    <string name="bookmark_edit">Modify</string>
    <string name="bookmark_edit_dir">Edit folder</string>
    <string name="bookmark_edit_url">Edit</string>
    <string name="bookmark_folder_not_null">Folder name cant be empty</string>
    <string name="bookmark_history">Bookmark/History</string>
    <string name="bookmark_more">More</string>
    <string name="bookmark_move">Move to</string>
    <string name="bookmark_new_folder">New folder</string>
    <string name="bookmark_ok">OK</string>
    <string name="bookmark_revise_name">Title</string>
    <string name="bookmark_revise_web">Website</string>
    <string name="bookmark_save">Save</string>
    <string name="bookmark_save_bookmark_toast_text">Save recently copied url</string>
    <string name="bookmark_select_folder">Choose folder to move</string>
    <string name="bookmark_select_tips">%d bookmark(s) selected</string>
    <string name="bookmark_share">Share</string>
    <string name="bookmark_to_favorites">Move to:</string>
    <string name="bookmark_top_stick">Sticky on Top</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="broswse_setting_item_font_preview_text">"If I can stop one heart from breaking,
I shall not live in vain;
If I can ease one life the aching,
Or cool one pain,
Or help one fainting robin
Unto his nest again,
I shall not live in vain."</string>
    <string name="broswse_setting_item_tip_text_big">largest</string>
    <string name="broswse_setting_item_tip_text_bigger">larger</string>
    <string name="broswse_setting_item_tip_text_normal">standard</string>
    <string name="broswse_setting_item_tip_text_small">smallest</string>
    <string name="broswse_setting_item_tip_text_smaller">smaller</string>
    <string name="browse_setting_item_font_size">Font size</string>
    <string name="browse_setting_item_no_image">No image on mobile data</string>
    <string name="browser_form_not_save">No</string>
    <string name="browser_form_save">Yes</string>
    <string name="browser_form_save_tips">Save account and password for next time autofill</string>
    <string name="browser_geolocation_permissions_message">need to fetch your geolocation info</string>
    <string name="browser_geolocation_permissions_permit">Allow</string>
    <string name="devconfig_cd_params">CdParams配置</string>
    <string name="devconfig_clear_data_and_install_new_uc">清除数据，全新安装</string>
    <string name="devconfig_common">常用</string>
    <string name="devconfig_configs">配置项</string>
    <string name="devconfig_enable_devconfig_sp">启用dev调试开关</string>
    <string name="devconfig_enable_devconfig_sp_summary">请重启浏览器</string>
    <string name="devconfig_file_and_resource">文件和资源管理</string>
    <string name="devconfig_query_data">查询数据</string>
    <string name="devconfig_query_dn">DN</string>
    <string name="devconfig_query_gaid">GAID</string>
    <string name="devconfig_query_utdid">UTDID</string>
    <string name="devconfig_restart">重启浏览器</string>
    <string name="devconfig_setting_flags">SettingFlags配置</string>
    <string name="devconfig_setting_switch">dev开关</string>
    <string name="devconfig_switch_country">国家切换</string>
    <string name="devconfig_switch_id_env">切换印尼US环境</string>
    <string name="devconfig_switch_in_env">切换印度US环境</string>
    <string name="devconfig_us_data">UsData配置</string>
    <string name="devconfig_us_env_release">连接us生产环境</string>
    <string name="devconfig_us_env_release_genglish">通用英语</string>
    <string name="devconfig_us_env_release_india">印度</string>
    <string name="devconfig_us_env_release_indonesia">印尼</string>
    <string name="devconfig_us_env_release_pakistan">巴基斯坦</string>
    <string name="devconfig_us_env_test">连接us测试环境</string>
    <string name="devconfig_us_env_test_bengal">孟加拉国</string>
    <string name="devconfig_us_env_test_genglish">通用英语</string>
    <string name="devconfig_us_env_test_india">印度</string>
    <string name="devconfig_us_env_test_indonesia">印尼</string>
    <string name="devconfig_us_env_test_pakistan">巴基斯坦</string>
    <string name="input_enhance_keyword_clipboard">Clipboard</string>
    <string name="input_enhance_keyword_cn">.cn</string>
    <string name="input_enhance_keyword_com">.com</string>
    <string name="input_enhance_keyword_dot">.</string>
    <string name="input_enhance_keyword_org">.org</string>
    <string name="input_enhance_keyword_slash">/</string>
    <string name="input_enhance_keyword_wap">wap.</string>
    <string name="main_setting_item_wallpaper">Wallpaper</string>
    <string name="quark_lab_wallper_setting_select_from_album">Album</string>
    <string name="search_address_bar_text_cancel">Cancel</string>
    <string name="search_address_bar_text_search">Search</string>
    <string name="shortcut_menu_setting_switch_subtitle">Swipe out from right side during browsing</string>
    <string name="shortcut_menu_setting_switch_title">Enable Shortcut tool</string>
    <string name="shortcut_menu_setting_tip_text">Add shortcut tool</string>
</resources>