<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="right" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="@dimen/input_enhance_layout_height"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.ucturbo.ui.widget.TextView android:textSize="@dimen/input_enhance_keyword_text_size" android:textColor="@color/input_enhance_keyword_color" android:gravity="center" android:id="@id/keyword_wap" android:layout_width="@dimen/input_enhance_keyword_width" android:layout_height="fill_parent" android:layout_marginRight="@dimen/input_enhance_wap_right_margin" android:text="@string/input_enhance_keyword_wap" />
    <com.ucturbo.ui.widget.TextView android:textSize="@dimen/input_enhance_keyword_text_size" android:textColor="@color/input_enhance_keyword_color" android:gravity="center" android:id="@id/keyword_com" android:visibility="gone" android:layout_width="@dimen/input_enhance_keyword_width" android:layout_height="fill_parent" android:layout_marginRight="@dimen/input_enhance_com_right_margin" android:text="@string/input_enhance_keyword_com" />
    <com.ucturbo.ui.widget.TextView android:gravity="center_vertical" android:background="@color/input_enhance_divider_color" android:visibility="gone" android:layout_width="@dimen/input_enhance_divider_width" android:layout_height="@dimen/input_enhance_divider_height" android:layout_marginRight="@dimen/input_enhance_divider_right_margin" />
    <com.ucturbo.ui.widget.TextView android:textSize="@dimen/input_enhance_keyword_text_size" android:textColor="@color/input_enhance_keyword_color" android:gravity="center" android:id="@id/keyword_clipboard" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginRight="@dimen/input_enhance_clipboard_right_margin" android:text="@string/input_enhance_keyword_clipboard" />
    <com.ucturbo.ui.widget.TextView android:textSize="@dimen/input_enhance_keyword_text_size" android:textColor="@color/input_enhance_keyword_color" android:gravity="center" android:id="@id/keyword_org" android:layout_width="@dimen/input_enhance_keyword_width" android:layout_height="fill_parent" android:layout_marginRight="@dimen/input_enhance_clipboard_right_margin" android:text="@string/input_enhance_keyword_org" />
</LinearLayout>