<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="@dimen/input_enhance_layout_height"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.ucturbo.ui.widget.TextView android:textSize="@dimen/input_enhance_keyword_text_size" android:textColor="@color/input_enhance_keyword_color" android:gravity="center" android:id="@id/keyword_dot" android:layout_width="@dimen/input_enhance_keyword_width" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/input_enhance_dot_left_margin" android:text="@string/input_enhance_keyword_dot" android:singleLine="true" />
    <com.ucturbo.ui.widget.TextView android:textSize="@dimen/input_enhance_keyword_text_size" android:textColor="@color/input_enhance_keyword_color" android:gravity="center" android:id="@id/keyword_slash" android:layout_width="@dimen/input_enhance_keyword_width" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/input_enhance_slash_left_margin" android:text="@string/input_enhance_keyword_slash" android:singleLine="true" />
    <com.ucturbo.ui.widget.TextView android:textSize="@dimen/input_enhance_keyword_text_size" android:textColor="@color/input_enhance_keyword_color" android:gravity="center" android:id="@id/keyword_cn" android:visibility="gone" android:layout_width="@dimen/input_enhance_keyword_width" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/input_enhance_cn_left_margin" android:text="@string/input_enhance_keyword_cn" android:singleLine="true" />
</LinearLayout>