<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="14.0dip" android:gravity="center" android:layout_gravity="center|right" android:id="@id/bk_search_cancel" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginRight="26.0dip" android:text="@string/search_address_bar_text_cancel" />
        <FrameLayout android:id="@id/bk_search_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip">
            <EditText android:textSize="14.0dip" android:id="@id/bk_search_edittext" android:paddingLeft="15.0dip" android:paddingRight="30.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/search_address_bar_text_search" android:singleLine="true" />
            <ImageView android:layout_gravity="center|right" android:id="@id/bk_search_clear_btn" android:padding="5.0dip" android:visibility="gone" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginRight="5.0dip" />
        </FrameLayout>
    </FrameLayout>
    <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="12.0dip" android:gravity="center" android:id="@id/bk_search_empty_tip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="50.0dip" android:text="@string/bk_search_bar_empty_tip" />
    </FrameLayout>
</LinearLayout>