<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@null" android:paddingLeft="24.0dip" android:paddingTop="24.0dip" android:paddingRight="24.0dip" android:paddingBottom="21.329987dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/first_row" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip">
        <com.ucturbo.ui.widget.auto.theme.ATTextView android:textSize="@dimen/common_dialog_text_size" android:textStyle="bold" android:textColor="#ff222222" android:ellipsize="end" android:gravity="center" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/main_setting_item_wallpaper" android:maxLines="1" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <com.ucturbo.ui.widget.auto.theme.ATTextView android:textSize="@dimen/common_dialog_text_size" android:textStyle="bold" android:textColor="#ff4110e6" android:ellipsize="end" android:id="@id/album" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/quark_lab_wallper_setting_select_from_album" android:maxLines="1" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <HorizontalScrollView android:scrollbars="none" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="30.0dip">
        <LinearLayout android:orientation="horizontal" android:id="@id/album_list" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </HorizontalScrollView>
    <RelativeLayout android:id="@id/three_row" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.ucturbo.ui.widget.auto.theme.ATTextView android:textSize="@dimen/common_dialog_text_size" android:textStyle="bold" android:textColor="#ff222222" android:ellipsize="end" android:gravity="center" android:id="@id/cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bookmark_cancel" android:maxLines="1" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <com.ucturbo.ui.widget.auto.theme.ATTextView android:textSize="@dimen/common_dialog_text_size" android:textStyle="bold" android:textColor="#ff4110e6" android:ellipsize="end" android:id="@id/done" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bookmark_complete" android:maxLines="1" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
</LinearLayout>