<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/shortcut_menu_switch_container" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/shortcut_menu_switch" android:layout_width="fill_parent" android:layout_height="86.0dip">
            <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_weight="1.0">
                <TextView android:textSize="14.0dip" android:id="@id/shortcut_menu_switch_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/shortcut_menu_setting_switch_title" />
                <TextView android:textSize="10.0dip" android:id="@id/shortcut_menu_switch_subtitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/shortcut_menu_setting_switch_subtitle" />
            </LinearLayout>
            <androidx.appcompat.widget.SwitchCompat android:id="@id/shortcut_menu_switch_compat" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="16.0dip" />
        </LinearLayout>
        <FrameLayout android:id="@id/shortcut_menu_tip_container" android:layout_width="fill_parent" android:layout_height="30.0dip">
            <TextView android:textSize="10.0dip" android:layout_gravity="center_vertical" android:id="@id/shortcut_menu_tip_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:text="@string/shortcut_menu_setting_tip_text" />
        </FrameLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/shortcut_menu_items_container" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
    </LinearLayout>
</ScrollView>